style burger menu

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,5 +2,7 @@
   "landing-page-subheader": "Easily encrypt and decrypt files at your fingertips.",
   "landing-page-paragraph": "Upload a file, choose an encryption algorithm and secure your data with ease.",
   "sign-up-btn": "Sign Up",
-  "sign-in-btn": "Sign In"
+  "sign-in-btn": "Sign In",
+  "sign-up-header": "Create Your Account and Dive In!",
+  "sign-in-header": "Already have an account? Sign In!"
 }
