--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -15,5 +15,8 @@
   "tos": "Terms of Service",
   "error-password-requirements": "Password must include at least one symbol, one number and one uppercase letter.",
   "error-passwords-dont-match": "Passwords don't match.",
-  "error-terms-not-accepted": "You must agree to the Terms of Service."
+  "error-terms-not-accepted": "You must agree to the Terms of Service.",
+  "dashboard-header": "Upload and Encrypt Files",
+  "dropdown--encrypt-placeholder": "Select an algorithm",
+  "dropzone-placeholder": "Drag and Drop Files Here"
 }
