tos language and css fixes

--- a/src/locales/bg/translation.json
+++ b/src/locales/bg/translation.json
@@ -22,5 +22,21 @@
   "dropzone-placeholder": "Поставете файлове тук",
   "success-upload": "Файлът беше качен успешно!",
   "error-no-algorithm": "Моля, изберете алгоритъм.",
-  "error-file-not-supported": "не е поддържан тип файл."
+  "error-file-not-supported": "не е поддържан тип файл.",
+  "tos-rule-1-subheader": "Демонстрационно Приложение",
+  "tos-rule-1-text": "Моля, имайте предвид, че тази платформа служи като демонстрация и не гарантира дългосрочната защита на качените от вас файлове.",
+  "tos-rule-2-subheader": "Потребителска Преценка",
+  "tos-rule-2-text": "Приложението е в своя бета етап. Призоваваме потребителите да бъдат внимателни и да използват приложението по своя преценка.",
+  "tos-rule-3-subheader": "Контрол върху Файловете",
+  "tos-rule-3-text": "Като собственик на този проект, запазвам правото да модифицирам, изтривам или променям качените файлове, както смятам за необходимо. Моля, да не качвате класифицирани или лични файлове.",
+  "tos-rule-4-subheader": "Методи за Криптиране",
+  "tos-rule-4-text": "Проектът изследва различни методи за криптиране на файлове, включително персонализиран експериментален криптографски метод. Сигурността на тези методи може да не е напълно установена.",
+  "tos-rule-5-subheader": "Потребителско Съгласие",
+  "tos-rule-5-text": "Чрез използването на това приложение, вие признавате и се съгласявате с посочените по-горе условия и използвате приложението на свой собствен риск.",
+  "tos-rule-6-subheader": "Ограничение на Отговорността",
+  "tos-rule-6-text": "Не носим отговорност за евентуални щети или загуби, произтичащи от използването на това приложение.",
+  "tos-rule-7-subheader": "Промени в Условията",
+  "tos-rule-7-text": "Условията за ползване могат да бъдат актуализирани периодично. Продължителното използване означава приемане на тези промени.",
+  "tos-rule-8-subheader": "Отказ от Отговорност",
+  "tos-rule-8-text": "Приложението се предоставя 'както е' без каквито и да е гаранции или уверения."
 }
