--- a/src/locales/bg/translation.json
+++ b/src/locales/bg/translation.json
@@ -39,5 +39,7 @@
   "tos-rule-7-text": "Условията за ползване могат да бъдат актуализирани периодично. Продължителното използване означава приемане на тези промени.",
   "tos-rule-8-subheader": "Отказ от Отговорност",
   "tos-rule-8-text": "Приложението се предоставя 'както е' без каквито и да е гаранции или уверения.",
-  "encryption-key-placeholder": "Ключ за криптиране"
+  "encryption-key-placeholder": "Ключ за криптиране",
+  "error-file-size-exceeded": "Лимитът за размер на файловете е 10MB.",
+  "algo-not-selected": "Моля, изберете алгоритъм."
 }
