--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -38,5 +38,7 @@
   "tos-rule-7-text": "The Terms of Service may be updated periodically. Continued use signifies acceptance of these changes.",
   "tos-rule-8-subheader": "Disclaimer",
   "tos-rule-8-text": "The app is provided 'as is' without any warranties or guarantees.",
-  "encryption-key-placeholder": "Encryption key"
+  "encryption-key-placeholder": "Encryption key",
+  "error-file-size-exceeded": "Limit of 10MB exceeded.",
+  "algo-not-selected": "Algorithm not selected."
 }
