--- a/src/locales/bg/translation.json
+++ b/src/locales/bg/translation.json
@@ -41,5 +41,7 @@
   "tos-rule-8-text": "Приложението се предоставя 'както е' без каквито и да е гаранции или уверения.",
   "encryption-key-placeholder": "Ключ за криптиране",
   "error-file-size-exceeded": "Лимитът за размер на файловете е 10MB.",
-  "algo-not-selected": "Моля, изберете алгоритъм."
+  "algo-not-selected": "Моля, изберете алгоритъм.",
+  "upload-encrypt": "Качи / Криптирай",
+  "download-decrypt": "Свали / Декриптирай"
 }
