--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -40,5 +40,7 @@
   "tos-rule-8-text": "The app is provided 'as is' without any warranties or guarantees.",
   "encryption-key-placeholder": "Encryption key",
   "error-file-size-exceeded": "Limit of 10MB exceeded.",
-  "algo-not-selected": "Algorithm not selected."
+  "algo-not-selected": "Algorithm not selected.",
+  "upload-encrypt": "Upload / Encrypt",
+  "download-decrypt": "Download / Decrypt"
 }
