--- a/src/locales/bg/translation.json
+++ b/src/locales/bg/translation.json
@@ -49,5 +49,6 @@
   "algorithm": "Алгоритъм",
   "date-of-upload": "Дата на Качване",
   "file-id": "Идентификатор на Файл",
-  "actions": "Действия"
+  "actions": "Действия",
+  "note-msg-dashboard": "ЗАБЕЛЕЖКА: Предоставете ключ с дължина 64 знака (32 байта)."
 }
