--- a/src/locales/bg/translation.json
+++ b/src/locales/bg/translation.json
@@ -42,8 +42,8 @@
   "encryption-key-placeholder": "Ключ за криптиране",
   "error-file-size-exceeded": "Лимитът за размер на файловете е 10MB.",
   "algo-not-selected": "Моля, изберете алгоритъм.",
-  "upload-encrypt": "Качи / Криптирай",
-  "download-decrypt": "Свали / Декриптирай",
+  "upload-encrypt": "Към Сваляне",
+  "download-decrypt": "Към Качване на файл",
   "error-fetching-files": "Възникна грешка при зареждането на файловете.",
   "file-name": "Име на Файл",
   "algorithm": "Алгоритъм",
