--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -41,8 +41,8 @@
   "encryption-key-placeholder": "Encryption key",
   "error-file-size-exceeded": "Limit of 10MB exceeded.",
   "algo-not-selected": "Algorithm not selected.",
-  "upload-encrypt": "Upload / Encrypt",
-  "download-decrypt": "Download / Decrypt",
+  "upload-encrypt": "Go to Download Page",
+  "download-decrypt": "Go to Upload Page",
   "error-fetching-files": "Error fetching user files",
   "file-name": "File Name",
   "algorithm": "Algorithm",
