--- a/src/locales/bg/translation.json
+++ b/src/locales/bg/translation.json
@@ -50,5 +50,5 @@
   "date-of-upload": "Дата на Качване",
   "file-id": "Идентификатор на Файл",
   "actions": "Действия",
-  "note-msg-dashboard": "ЗАБЕЛЕЖКА: Предоставете ключ с дължина 64 знака (32 байта)."
+  "note-msg-dashboard": "ЗАБЕЛЕЖКА: Предоставете 32-значен, 256-битов ключ за криптиране. Пример: nThhx0qig4L55HXZv4YN5o64iFEM0ZZy."
 }
