--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -49,5 +49,5 @@
   "date-of-upload": "Date of Upload",
   "file-id": "File ID",
   "actions": "Actions",
-  "note-msg-dashboard": "NOTE: Provide a 32 characters, 256-bit encryption key. Example: nThhx0qig4L55HXZv4YN5o64iFEM0ZZy."
+  "note-msg-dashboard": "NOTE: Provide a 32-byte hex, 256-bit encryption key. Example: 7640ae0007a08bec978265685dfc1126aca410419f403e1637e0ce0fcfef2ae8."
 }
