--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -38,6 +38,8 @@
   "tos-rule-7-text": "The Terms of Service may be updated periodically. Continued use signifies acceptance of these changes.",
   "tos-rule-8-subheader": "Disclaimer",
   "tos-rule-8-text": "The app is provided 'as is' without any warranties or guarantees.",
+  "tos-rule-9-subheader": "Permitted Testing",
+  "tos-rule-9-text": "Users are granted permission to conduct security penetration testing against this web application and its associated back-end infrastructure, provided such activities do not induce Denial of Service (DoS) or any form of attacks that could lead to server overloads, resulting in excessive costs. Should any user engage in activities that compromise the service availability, including but not limited to DoS attacks, the proprietor reserves the right to seek remediation through legal means or law enforcement assistance.",
   "encryption-key-placeholder": "Encryption key",
   "error-file-size-exceeded": "Limit of 10MB exceeded.",
   "algo-not-selected": "Algorithm not selected.",
